--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #B94B4C;
   --text-color: #333;
-  --background-color: #000001;
+  --background-color: #ffffff;
 }
 
 * {
